# macbook-wechat-zhuaqu

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: config.example.json
scripts/: extract_keys.py  list_contacts.py  skill_entry.py  start_server.py  wechat_daily.py
skill/: SKILL.md
src/macbook_wechat_zhuaqu/service/: app.py  cli.py  models.py  runtime.py  wechat.py
src/macbook_wechat_zhuaqu/web/: index.html
tests/: test_service_api.py
