[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "macbook-wechat-zhuaqu"
version = "0.1.0"
description = "Skill + local service dashboard for WeChat daily digests on macOS."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.scripts]
macbook-wechat-zhuaqu = "macbook_wechat_zhuaqu.service.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["macbook_wechat_zhuaqu*"]
